--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* h1 {
+h1 {
     color: #34434B;
 }
 .btn {
@@ -15,10 +15,24 @@
 .btn-success:disabled,
 .btn-success:disabled:hover {
     background-color: #ACA286;
-    border-color: #ACA286;
+    border-color: #ACA285;
+}
+.btn-success:not(:disabled):not(.disabled):active, 
+.btn-success:not(:disabled):not(.disabled).active,
+.show > .btn-success.dropdown-toggle {
+  background-color: rgb(139, 130, 103);
+  border-color: #A09474;
+}
+.btn-success:not(:disabled):not(.disabled):active:focus, 
+.btn-success:not(:disabled):not(.disabled).active:focus,
+.show > .btn-success.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.1rem #A09474;
+}
+.btn-success:focus, .btn-success.focus {
+	box-shadow: 0 0 0 0.1rem #ACA286;
 }
 .btn-xl {
-    padding: 1.2rem 3rem;
+  padding: 1.2rem 3rem;
 }
 .btn-primary,
 .btn-primary:active,
@@ -46,4 +60,4 @@ select {
 textarea {
     background-color: #F7F7F7 !important;
     resize: none;
-} */
+}
